<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <ImageView
        android:id="@+id/imageDetailFragment"
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/suunglases" />

        <ImageButton
            android:id="@+id/likeCkeckBox"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@color/cardview_light_background"
            android:src="@mipmap/heart_foreground"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageDetailFragment"
            android:contentDescription="TODO" />


    <androidx.cardview.widget.CardView
        android:id="@+id/detailCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/imageDetailFragment">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <TextView
        android:id="@+id/ttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"

        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        
        tools:text="Kot" />


    <TextView
        android:id="@+id/priceDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:saveEnabled="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false"
        android:textStyle="bold"
        android:layout_marginStart="20dp"


        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttitle"
        tools:text="99,99 zl" />


            <TextView
        android:id="@+id/currencyDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:saveEnabled="false"

                android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false"
        android:textStyle="bold"

        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintLeft_toRightOf="@id/priceDetail"
        app:layout_constraintTop_toBottomOf="@+id/ttitle"
  />

    <Button
        android:id="@+id/buttonShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"

        android:text="@string/kup_teraz"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMail"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fab_margin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonShop"
        app:srcCompat="@android:drawable/sym_action_email" />

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kategoria"
        tools:layout_editor_absoluteX="29dp"
        app:layout_constraintTop_toBottomOf="@+id/priceDetail"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="10dp"
        android:padding="5dp"

        tools:layout_editor_absoluteY="555dp" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/category"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="10dp"
        android:padding="5dp"

        android:text="@string/rozmiar" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marka"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"

        tools:layout_editor_absoluteX="25dp"
        app:layout_constraintTop_toBottomOf="@+id/size"
        android:paddingLeft="10dp"

        tools:layout_editor_absoluteY="572dp" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/brand"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="10dp"
        android:padding="5dp"

       android:layout_marginBottom="100dp"
        android:text="@string/stan"
 />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailCardView"
        tools:text="Przeciwsłoneczne okulary to niezbędny element stroju dla wszystkich stylowych kobiet i mężczyzn." />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
